# Nexa---Fundamentos-de-IA-Generativa-com-Bedrock

./: LICENSE  README.md  main.py  pyproject.toml
agent_depoyment/: meu_agente.py  pyproject.toml
